@@ -1,3 +1,8 @@
+2010-01-25  Piotr Fusik  <fox@scene.pl>
+* asap.h, xbmc/xbmc_asap.c, win32/info_dlg.c, win32/foobar2000/foo_asap.cpp:
+  created ASAP_INFO_CHARS
+
+
 2010-01-24  Piotr Fusik  <fox@scene.pl>
 * asap2wav.c, asapconv.c, Makefile, INSTALL, README, PORTS.xml, win32/Makefile,
   win32/USAGE, win32/setup/asap.wxs: replaced asap2wav with asapconv,
